--- a/views/users/Profile/userProfile.ejs
+++ b/views/users/Profile/userProfile.ejs
@@ -103,23 +103,28 @@
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/userProfile"> <button type="button" class="btn btn-info"
+										<a href="/userProfile"> <button type="button" class="btn btn-dark"
 												style="width: 280px;">User Profile</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/changePassword"> <button type="button" class="btn btn-outline-info"
+										<a href="/changePassword"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Change Password</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/address"> <button type="button" class="btn btn-outline-info"
+										<a href="/address"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Address Management</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/order"> <button type="button" class="btn btn-outline-info"
+										<a href="/order"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Order</button> </a>
+									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+										style="width: 310px;">
+										<a href="/wishlist"> <button type="button" class="btn btn-outline-dark"
+												style="width: 280px;">Wishlist</button> </a>
 									</li>
 
 								</ul>
