--- a/views/admin/Category/deletedCategory.ejs
+++ b/views/admin/Category/deletedCategory.ejs
@@ -90,25 +90,25 @@
                         </a>
                       </li>
                       <li>
-                        <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
+                        <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
                           <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="general-pages">
                           <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
-                            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                            <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/admin/categoryOffers"> Category Offers </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/admin/productOffers"> Product Offers </a></li>
+                            <!-- <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
                             <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-                            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li> -->
                           </ul>
                         </div>
                       </li>
                       <li>
-                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
+                        <a class="nav-link" href="/admin/couponOffers"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i class="mdi mdi-ticket"></i> </button>
                         </a>
                       </li>
                       <li>
-                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i class="mdi mdi-ticket"></i> </button>
+                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
                         </a>
                       </li>
                       <li>
