--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -92,33 +92,29 @@
               <button type="button" class="btn btn-gradient-dark btn-rounded w-100">Order <i class="mdi mdi-shopping"></i> </button>
             </a>
           </li>
-          <li>
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false"
-              aria-controls="general-pages">
-              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i>
-              </button>
+          <li >
+            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="general-pages">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+                <li class="nav-item"> <a class="nav-link" href="/admin/categoryOffers"> Category Offers </a></li>
+                <li class="nav-item"> <a class="nav-link" href="/admin/productOffers"> Product Offers </a></li>
+                <!-- <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
                 <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li> -->
               </ul>
             </div>
           </li>
           <li>
-            <a class="nav-link" href="pages/tables/basic-table.html">
-              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i
-                  class="mdi mdi-percent"></i> </button>
+            <a class="nav-link" href="/admin/couponOffers">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 "> Coupons <i class="mdi mdi-ticket"></i>  </button>
             </a>
           </li>
           <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i
-                  class="mdi mdi-ticket"></i> </button>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
             </a>
           </li>
           <li>
@@ -155,7 +151,7 @@
                           <th> Sl.No </th>
                           <th> User </th>
                           <th> Email </th>
-                          <!-- <th> Total </th> -->
+                          <th> Payment Method </th>
                           <th> Ordered Date </th>
                           <th> Details </th>
                         </tr>
@@ -169,9 +165,9 @@
                                 <img src="/Photos/userImages/<%= users[i].image %>" alt="image" /> <span> <%= users[i].name %> </span>
                               </td>
                               <td> <%= users[i].email %> </td>
-                              <!-- <td>
-                                $ <%= order[i].orderItems.totalPrice %>
-                              </td> -->
+                              <td style="color: green;" >
+                                <%= order[i].paymentMethod %>
+                              </td>
                               <td>  <%= order[i].orderDate.toDateString() %> </td>
                               <td> <button type="button" class="btn btn-gradient-warning btn-sm" onclick="details('<%= order[i]._id %>')" > Details </button> </td>
                             </tr>
@@ -204,14 +200,14 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
+    <script src="../../admin/js/off-canvas.js"></script>
+    <script src="../../admin/js/hoverable-collapse.js"></script>
+    <script src="../../admin/js/misc.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
     <!-- End custom js for this page -->
