--- a/views/users/Profile/userPasswordManagement.ejs
+++ b/views/users/Profile/userPasswordManagement.ejs
@@ -104,23 +104,28 @@
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/userProfile"> <button type="button" class="btn btn-outline-info"
+										<a href="/userProfile"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">User Profile</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/changePassword"> <button type="button" class="btn btn-info"
+										<a href="/changePassword"> <button type="button" class="btn btn-dark"
 												style="width: 280px;">Change Password</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/address"> <button type="button" class="btn btn-outline-info"
+										<a href="/address"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Address Management</button> </a>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 										style="width: 310px;">
-										<a href="/order"> <button type="button" class="btn btn-outline-info"
+										<a href="/order"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Order</button> </a>
+									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+									style="width: 310px;">
+									<a href="/wishlist"> <button type="button" class="btn btn-outline-dark"
+											style="width: 280px;">Wishlist</button> </a>
 									</li>
 
 								</ul>
@@ -282,7 +287,6 @@
 					const password2 = document.getElementById("password2").value.trim();
 
 					const response = await axios.post('/changePassword', { password, password1, password2 });
-					console.log('hsjdkhjdfkshkjh');
 					console.log(response);
 					if (response.data.success) {
 						await Swal.fire({
