--- a/views/users/checkout/checkout.ejs
+++ b/views/users/checkout/checkout.ejs
@@ -224,47 +224,151 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQ2t8wPd4NzzBqxREyZK8XvCqaEiPTzUMHPO+sB4QQyebJgZDedQ1IKfHAj62N2F" crossorigin="anonymous"></script>
 
+	<!-- razor pay cdn -->
+	<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 	<script>
 	async function paymentMethod(payment) {
-    const confirmation = await Swal.fire({
-        title: 'Confirm Payment',
-        text: "Are you sure you want to proceed with Cash On Delivery?",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, proceed!'
-    });
+		console.log(payment);
+		const confirmation = await Swal.fire({
+			title: 'Confirm Payment',
+			text: "Are you sure you want to proceed with Cash On Delivery?",
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonColor: '#3085d6',
+			cancelButtonColor: '#d33',
+			confirmButtonText: 'Yes, proceed!'
+		});
 
-    if (confirmation.isConfirmed) {
-        try {
-            const response = await axios.post('/checkout/cod', {payment});
-            if (response.data.success) {
-                Swal.fire({
-                    icon: 'success',
-                    title: 'Confirmed!',
-                    text: response.data.message
-                }).then(()=>{
-					window.location.href = '/orderSuccess'
-				})
-            } else {
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Failed!',
-                    text: response.data.message || 'Unable to process the order.'
-                });
-            }
-        } catch (error) {
-            console.error('Error during the transaction:', error);
-            await Swal.fire({
-                icon: 'error',
-                title: 'Error',
-                text: 'Something went wrong!'
-            });
-        }
-    }
-}
+		if (confirmation.isConfirmed) {
+			try {
+				if(payment === "Cash On Delivery"){
+					const response = await axios.post('/checkout/payment', {payment});
+					if (response.data.success) {
+						Swal.fire({
+							icon: 'success',
+							title: 'Confirmed!',
+							text: response.data.message
+						}).then(()=>{
+							window.location.href = '/orderSuccess'
+						})
+					} else {
+						Swal.fire({
+							icon: 'error',
+							title: 'Failed!',
+							text: response.data.message || 'Unable to process the order.'
+						});
+					}
+				}else if(payment === "Online Payment"){
+					console.log('hloo');
+					const response = await axios.post('/checkout/payment', {payment});
+					const { totalPrice, orderId, key_id, razorpayOrderId } = response.data
+					console.log(response.data,'ith response data');
+					// console.log(orderId,'ordre isddfd');
+					if(response.data.success){
+						var options = {
+							"key": key_id,
+							"amount": totalPrice * 100,
+							"currency": "INR",
+							"name": "KIONA",
+							"order_id":"",
+							"description": "Order Payment",
+							"image": "https://example.com/your_logo",
+
+							"handler":function (response){
+								console.log('Razorpay payment success', response);
+								verifyPayment(response.razorpay_payment_id, orderId);
+							},
+							"prefill": {
+								"name": "Customer Name",
+								"email": "customer_email@example.com",
+								"contact": "customer_phone"
+							},
+							"notes": {
+								"address": "Razorpay Corporate Office"
+							},
+							"theme": {
+								"color": "#192e68"
+							}
+						};
+						var paymentGateway = new Razorpay(options);
+						paymentGateway.open();
+					}else{
+						Swal.fire({
+							icon: 'error',
+							title: 'Failed!',
+							text: response.data.message || 'Unable to process the order.'
+						}).then(()=>{
+							window.location.href = "/order"
+						})
+					}
+				}
+			} catch (error) {
+				console.error('Error during the transaction:', error);
+				await Swal.fire({
+					icon: 'error',
+					title: 'Error',
+					text: 'Something went wrong!'
+				});
+			}
+		}
+	}
+	async function verifyPayment(paymentId, orderId) {
+		console.log(paymentId);
+		console.log(orderId);
+		// console.log(signature);
+		try {
+			const response = await axios.post('/paymentSuccess', { paymentId, orderId });
+			if (response.data.success) {
+				console.log('kooioii');
+				Swal.fire({
+					title: "Order Placed",
+					text: "Your Order is Confirmed",
+					icon: "success"
+				}).then(() => {
+					window.location.href = '/orderSuccess';
+				});
+			}
+		} catch (error) {
+			console.log(error.message);
+			Swal.fire({
+				icon: 'error',
+				title: 'Error',
+				text: 'Something went wrong!'
+			});
+		}
+	}
+
+		
+		// fetch('/verifyPayment', {
+		// 	method: 'POST',
+		// 	headers: {
+		// 		'Content-Type': 'application/json'
+		// 	},
+		// 	body: JSON.stringify({
+		// 		paymentId: paymentId,
+		// 		orderId: orderId,
+		// 		razorpaySignature: signature
+		// 	})
+		// })
+		// .then(response => response.json())
+		// .then(data => {
+		// 	if (data.success) {
+		// 		Swal.fire({
+		// 			title: "Order Placed",
+		// 			text: "Your Order is Confirmed",
+		// 			icon: "success"
+		// 		}).then(() => {
+		// 			window.location.href = /orderDetails?orderId=${orderId};
+		// 		});
+		// 	} else {
+		// 		Swal.fire('Error', 'Payment verification failed. Please try again.', 'error');
+		// 	}
+		// })
+		// .catch(error => {
+		// 	console.error('Error:', error);
+		// 	Swal.fire('Error', 'Network Error. Try again.', 'error');
+		// });
 
 	</script>
 
