--- a/views/users/checkout/showAddress.ejs
+++ b/views/users/checkout/showAddress.ejs
@@ -160,11 +160,11 @@
 									Subtotal:
 								</span>
 							</div>
-							<!-- <div class="size-209">
+							<div class="size-209">
 								<span class="mtext-110 cl2" id="totalAmount">
-									$
+									$ <%= totalPrice %>
 								</span>
-							</div> -->
+							</div>
 						</div>
 						<div class="flex-w flex-t bor12 p-t-15 p-b-30">
 							<div class="size-208 w-full-ssm">
@@ -191,7 +191,7 @@
 							</div>
 							<div class="size-209 p-t-1">
 								<span class="mtext-110 cl2" id="totalAmount">
-									$
+									$ <%= totalPrice %>
 								</span>
 							</div>
 						</div>
