--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -139,8 +139,13 @@
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
+						<% let wishlistCount = 0 %>
+						<% for(let i=0 ; i<wishlistProduct.length ; i++){ %>
+							<% wishlistCount++; %>
+						<% } %>
+
 						<a href="#" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-							data-notify="0">
+							data-notify="<%= wishlistCount++; %>">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
 					</div>
@@ -252,7 +257,7 @@
 							View Cart
 						</a>
 
-						<a href="shoping-cart.html"
+						<a href=""
 							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
 							Check Out
 						</a>
@@ -339,9 +344,19 @@
 							<%= product.name %>
 						</h4>
 
-						<span class="mtext-106 cl2">
-							$<%= product.price %>
-						</span>
+
+						<% if(product.offerPrice){ %>
+							<span class="mtext-106 cl2">
+								RS:  <%= product.offerPrice %>
+							</span>
+							<span> <%= product.price %> </span>
+
+							<span style="color: green; font-weight: bold; font-size: larger; margin-left: 10px;"> <%= product.offer %> %</span>
+						<% }else{ %>
+							<span class="mtext-106 cl2">
+								$<%= product.price %>
+							</span>
+						<% } %>
 
 						<p class="stext-102 cl3 p-t-23">
 							<%= product.category %>
@@ -351,21 +366,21 @@
 						<!--  -->
 						<div class="p-t-33">
 							<div class="flex-w flex-r-m p-b-10">
-								<div class="size-203 flex-c-m respon6">
+								<!-- <div class="size-203 flex-c-m respon6">
 									Size
-								</div>
+								</div> -->
 
 								<div class="size-204 respon6-next">
-									<div class="rs1-select2 bor8 bg0">
+									<!-- <div class="rs1-select2 bor8 bg0">
 										<select class="js-select2" name="time">
 											<option>Choose an option</option>
 											<option> Free Size </option>
-											<!-- <option>Size M</option>
+											<option>Size M</option>
 											<option>Size L</option>
-											<option>Size XL</option> -->
+											<option>Size XL</option>
 										</select>
 										<div class="dropDownSelect2"></div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 
